State machine class created and added some new exceptions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-SET( lib_srcs states.cpp statemachine.cpp events.cpp )
+SET( lib_srcs states.cpp statemachine.cpp events.cpp exceptions.cpp )
 
 ADD_LIBRARY( JPStateMachineStatic STATIC ${lib_srcs})
 ADD_LIBRARY( JPStateMachine SHARED ${lib_srcs})
